<resources>
    <string name="app_name">SmartCR</string>

    <string name="finish_text">完成</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_home">列表</string>
    <string name="title_notifications">设置</string>
    <string name="search_hint">  搜索货柜</string>
    <string name="filter_hint">筛选</string>
    <string name="wash_hint">洗</string>
    <string name="reqair_hint">修</string>
    <string name="title_activity_filter">FilterActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_for_num">输入货柜编号的后四位</string>
    <string name="cancel">取消</string>
    <string name="kind">流程</string>
    <string name="com_hint">公司</string>
    <string name="a1">未洗</string>
    <string name="a2">已洗</string>
    <string name="a3">未修</string>
    <string name="a4">已修</string>
    <string name="a5">水洗</string>
    <string name="a6">化学洗</string>
    <string name="a7">除钉</string>
    <string name="a8">除纸</string>
    <string name="a9">公司</string>
    <string name="a10">oocl</string>
    <string name="a11">魅族</string>
    <string name="a12">金山</string>
    <string name="sure">确定</string>
    <string name="wash_before">洗前</string>
    <string name="wash_after">洗后</string>
    <string name="repair_before">修前</string>
    <string name="repair_after">修后</string>
    <string name="eixt_btn">退出登录</string>
    <string name="settings">设  置</string>
    <string name="rule_title">长按拖动进行排序，侧滑进行删除，点击按钮进行添加</string>
    <string name="add_btn">添加</string>
    <string name="add_hint">你还可以添加下面的选项作为规则里的元素</string>
    <string name="hint_1">当前图片的命名规则为：</string>
    <string name="hint_2">例如：</string>
    <string name="hint_3">完成编辑</string>
    <string name="hint_4">编  辑</string>
    <string name="hint_5">最后生成的图片名称如下：</string>
</resources>
