<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp" android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="40dp">
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="2dp"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/kind"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/w_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a1"
                    />
                <TextView
                    android:id="@+id/w_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a2"/>
                <TextView
                    android:id="@+id/r_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="15dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/r_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a4"/>
                <TextView
                    android:id="@+id/w_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a5"/>
                <TextView
                    android:id="@+id/c_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="15dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/n_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a7"/>
                <TextView
                    android:id="@+id/p_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a8"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="15dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="14sp"

                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="2dp"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/a9"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/c_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a10"/>
                <TextView
                    android:id="@+id/c_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a11"/>
                <TextView
                    android:id="@+id/c_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="15dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/a12"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="..."/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="14sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/search_gray"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="15dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="14sp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/sure_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:background="@color/theme_blue"
        />
</LinearLayout>
