<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/item_container"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp"
    android:background="@color/white"
    >
    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@color/search_gray"
        android:textColor="@color/black"
        android:text="2017-12-11"
        android:visibility="gone"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            >
            <TextView
                android:id="@+id/container_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01010122"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/company_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="oocl"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

        </LinearLayout>




    </LinearLayout>
    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/wash_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/washbefore"
            android:scaleType="centerInside"/>
        <ImageView
            android:id="@+id/repair_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/reqairbefore"
            android:scaleType="centerInside"/>
    </LinearLayout>-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ImageView
            android:id="@+id/pics_iv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerInside"
            android:padding="10dp"
            android:src="@drawable/nullpic"
            android:background="@color/theme_blue"/>
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp">
            <TextView
                android:id="@+id/wash_b_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/before"
                android:text="@string/wash_before"/>
            <ImageView
                android:id="@+id/wash_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/dont"
                android:scaleType="centerInside"/>
            <TextView
                android:id="@+id/wash_a_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/before"
                android:text="@string/wash_after"/>
            <ImageView
                android:id="@+id/wash_goon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:layout_marginLeft="30dp"
                android:src="@drawable/goon"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp">
            <TextView
                android:id="@+id/repair_b_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/before"
                android:text="@string/repair_before"/>
            <ImageView
                android:id="@+id/repair_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/dont"
                android:scaleType="centerInside"/>
            <TextView
                android:id="@+id/repair_a_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/before"
                android:text="@string/repair_after"/>
            <ImageView
                android:id="@+id/repire_goon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:layout_marginLeft="30dp"
                android:src="@drawable/goon"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>